--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <version>2.7.0</version>
     </parent>
 
+    <packaging>war</packaging>
+
     <dependencies>
         <!-- Spring Boot Dependencies -->
         <dependency>
@@ -34,7 +36,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
+            <version>8.0.33</version>
         </dependency>
 
         <dependency>
@@ -65,8 +67,8 @@
     </build>
 
     <properties>
-        <maven.compiler.source>22</maven.compiler.source>
-        <maven.compiler.target>22</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
