--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.ejb.entitymanager_factory_name=default
+spring.jpa.packages-to-scan=messagingapp.model
+
+server.port=8080
+# server.address=localhost  # Eliminat? pentru a folosi implicit localhost
 
