--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,15 @@
 
     <dependencies>
         <!-- Spring Boot Dependencies -->
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-bom</artifactId>
+            <version>2024.0.4</version>
+            <scope>import</scope>
+            <type>pom</type>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
